--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,8 @@ quarkus.datasource.password=sa
 
 # drop and create the database at startup (use `update` to only update the schema)
 quarkus.hibernate-orm.database.generation=drop-and-create
+
+%prod.quarkus.jaeger.service-name=people
+%prod.quarkus.jaeger.sampler-type=const
+%prod.quarkus.jaeger.sampler-param=1
+%prod.quarkus.jaeger.endpoint=http://jaeger-collector:14268/api/traces
