--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ quarkus.hibernate-orm.database.generation=drop-and-create
 %prod.quarkus.jaeger.sampler-type=const
 %prod.quarkus.jaeger.sampler-param=1
 %prod.quarkus.jaeger.endpoint=http://jaeger-collector:14268/api/traces
+
+org.acme.people.service.StarWarsService/mp-rest/url=https://swapi.dev
