--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,3 @@
-# Configuration file
-# key = value
 # configure your datasource
 %prod.quarkus.datasource.url=jdbc:postgresql://postgres-database/person
 %prod.quarkus.datasource.driver=org.postgresql.Driver
@@ -13,6 +11,12 @@ quarkus.datasource.password=sa
 
 # drop and create the database at startup (use `update` to only update the schema)
 quarkus.hibernate-orm.database.generation=drop-and-create
+
+# OpenShift extension
+%prod.quarkus.kubernetes-client.trust-certs=true
+%prod.quarkus.kubernetes.deployment-target=openshift
+%prod.quarkus.kubernetes.deploy=true
+%prod.quarkus.openshift.expose=true
 
 %prod.quarkus.jaeger.service-name=people
 %prod.quarkus.jaeger.sampler-type=const
